lab1/Test/L1-A-3-6.output
Error Type B at Line 1
Error Type A at Line 4
Error Type A at Line 5
Error Type B at Line 6
Error Type A at Line 7
Error Type B at Line 9
Error Type B at Line 9
