lab1/Test/L1-A-3-6.cmm
int JUgF5 ( , UnzQk82 

;
^struct {
  int %sGosqAirYtt7w [ 743890527 ] = b2KHKV6K ;
  float vxpuXo0aAncjc == ;
}kA ( int Z8JooyeW_es_IOWqH , int &VQFtrsKHSt ) {
}
1086093948.465530382 dIbpX1rg 